--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -12,5 +12,7 @@ RUN dotnet publish -c Release -o out
 # Build runtime image
 FROM microsoft/dotnet:aspnetcore-runtime
 WORKDIR /app
+RUN chown -R root:root /app/*
+USER root
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "AspNetCoreWebApp.dll"]
