--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -12,7 +12,6 @@ RUN dotnet publish -c Release -o out
 # Build runtime image
 FROM microsoft/dotnet:aspnetcore-runtime
 WORKDIR /app
-RUN chown -R root:root /app/*
-USER root
 COPY --from=build-env /app/out .
+EXPOSE -80 +8080
 ENTRYPOINT ["dotnet", "AspNetCoreWebApp.dll"]
